[package]
name = "factors-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "factors_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
rayon = "1.10.0"
thread_local = "1.1.8"

[dev-dependencies]
rstest = "0.23.0"
